Extremely minor CSS fixes to the desktop User Manager
- remove the border radius on the tray bar items, as it makes the
divider look rounded
- fix the font size so that the background isn't clipped (header-bar-item
inherited the wrong font size from body)

See bugs for screenshots of the original problems

BUG=402964,402960

Review URL: https://codereview.chromium.org/476253002

Cr-Commit-Position: refs/heads/master@{#290024}
git-svn-id: svn://svn.chromium.org/chrome/trunk/src@290024 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 60217087c2e6d2ee1fed9fd764cb4cc018964696

--- a/chrome/browser/resources/user_manager/control_bar.css
+++ b/chrome/browser/resources/user_manager/control_bar.css
@@ -23,6 +23,7 @@
 
 .header-bar-item {
   display: inline-block;
+  font-size: 12px;
 }
 
 html[dir=rtl] .header-bar-item {
@@ -59,9 +60,9 @@ html[dir=rtl] #login-header-bar #guest-user-button {
   background-position: left center;
   background-repeat: no-repeat;
   border: none;
+  border-radius: 0;
   box-shadow: none;
   cursor: pointer;
-  font-size: 12px;
   opacity: 0.8;
 }
 
